y3/jpp/assignment-interpreter/luna/examples/good/06-02-return.luna
fn setX(var x: int) -> nil {
    x = 1;
    return;
    x = 100;


}

var x: int = 0;

setX(x);

print("x is:", x);