y3/jpp/assignment-interpreter/luna/examples/bad/06-05-no-label.luna
fn add(a: int, b: int) {
    return a + b;

}
var a = 1;

print(add(a, b));